--- a/public/assets/front/css/post/style.css
+++ b/public/assets/front/css/post/style.css
@@ -248,9 +248,9 @@ header .src-area .src-btn{ position: absolute; top: 0; bottom: 0; left: 0; width
 
 .info-area .tag-area{ padding: 0 30px; }
 
-.tag-area > ul > li > a{ padding: 7px 12px; float: left; margin: 0 5px 5px 0; border: 1px solid #eee; background: #F5F6F8; }
+.tag-area > ul > li > a{ padding: 7px 12px; float: left; margin: 0 5px 5px 0; }
 
-.tag-area > ul > li > a:hover{ background: none; }
+/*.tag-area > ul > li > a:hover{ background: none; }*/
 
 
 
